# dobot-ros2-ai

./: .gitignore  README.md
.tokensave/: config.json
config/: dobot-autostart.env
docs/: calibration.md  jetson_tensorrt.md  vision_pick_place.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dobot_bringup/share/dobot_bringup/: package.ps1  package.sh
install/dobot_control_panel/share/dobot_control_panel/: package.ps1  package.sh
install/dobot_demos/share/dobot_demos/: package.ps1  package.sh
install/dobot_description/share/dobot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/dobot_diagnostics/share/dobot_diagnostics/: package.ps1  package.sh
install/dobot_driver/share/dobot_driver/: local_setup.sh  package.ps1  package.sh
install/dobot_end_effector/share/dobot_end_effector/: package.ps1  (+1 more)
log/: latest_build  latest_list  latest_test  latest_test-result
scripts/: export_yolo26_tensorrt.sh  jetson_max_perf.sh  start_dobot_autostart.sh
src/magician_ros2/: .gitignore
src/magician_ros2/dobot_vision_yolo/: README.md  package.xml  setup.cfg  setup.py
src/magician_ros2/dobot_web_interface/: README.md  package.xml  setup.cfg  setup.py
src/magician_ros2/dobot_web_interface/dobot_web_interface/: web_interface.py
src/magician_ros2/dobot_web_interface/dobot_web_interface/static/: app.js  index.html  styles.css
src/magician_ros2/dobot_web_interface/launch/: dobot_auto.launch.py  dobot_web_interface.launch.py
systemd/: dobot-magician.service
(+95 files in other folders)
