<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dobot_web_interface</name>
  <version>1.0.0</version>
  <description>Browser interface for Dobot Magician camera view and basic controls.</description>
  <maintainer email="jetson@example.com">jetson</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>dobot_msgs</depend>
  <exec_depend>dobot_vision_yolo</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
